# minsal-triage

./: .gitignore  Readme.md  app.py  db_utils.py  descripcion-tecnica.md  flujo-de-trabajo.md  model.py  nlp_processor.py  public_api.py  requirements.txt  schema.sql  setup_database.py  ticket_generator.py  utils.py  voice_recon.py
triage-totem/: hello.py  pyproject.toml
